@@ -69,8 +69,12 @@ const NEXL_TYPES = {
 	'num': JS_PRIMITIVE_TYPES.NUM,
 	'bool': JS_PRIMITIVE_TYPES.BOOL,
 	'str': JS_PRIMITIVE_TYPES.STR,
+
 	'null': JS_PRIMITIVE_TYPES.NULL,
-	'undefined': JS_PRIMITIVE_TYPES.UNDEFINED
+	'n': JS_PRIMITIVE_TYPES.NULL,
+
+	'undefined': JS_PRIMITIVE_TYPES.UNDEFINED,
+	'u': JS_PRIMITIVE_TYPES.UNDEFINED
 };
 
 const OBJECT_OPERATIONS_OPTIONS = {
